ROS2_Foxy/log/build_2024-11-04_05-30-27/fair_drip/stderr.log
  File "/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/Ros2_Listener_Robot.py", line 244
    if drop_point == 1
                     ^
SyntaxError: invalid syntax

